--- a/src/tec/ac/cr/gladiators/ui/menu.ui
+++ b/src/tec/ac/cr/gladiators/ui/menu.ui
@@ -17,23 +17,39 @@
    <widget class="QPushButton" name="playButton">
     <property name="geometry">
      <rect>
-      <x>460</x>
+      <x>360</x>
       <y>460</y>
-      <width>82</width>
-      <height>27</height>
+      <width>211</width>
+      <height>101</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">border: 0px</string>
+    </property>
     <property name="text">
-     <string>Play</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset theme="playButton" resource="assets/resources.qrc">
+      <normaloff>:/main/playButton.png</normaloff>:/main/playButton.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>200</width>
+      <height>200</height>
+     </size>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="mainLogo">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>70</y>
-      <width>381</width>
-      <height>311</height>
+      <x>330</x>
+      <y>120</y>
+      <width>261</width>
+      <height>231</height>
      </rect>
     </property>
     <property name="text">
@@ -46,6 +62,48 @@
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QLabel" name="background">
+    <property name="geometry">
+     <rect>
+      <x>-80</x>
+      <y>-60</y>
+      <width>1141</width>
+      <height>800</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="assets/resources.qrc">:/main/papyrus.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="backMat">
+    <property name="geometry">
+     <rect>
+      <x>244</x>
+      <y>36</y>
+      <width>441</width>
+      <height>411</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="assets/resources.qrc">:/main/mat.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <zorder>background</zorder>
+   <zorder>playButton</zorder>
+   <zorder>backMat</zorder>
+   <zorder>mainLogo</zorder>
   </widget>
  </widget>
  <resources>
