--- a/src/tec/ac/cr/gladiators/ui/field.ui
+++ b/src/tec/ac/cr/gladiators/ui/field.ui
@@ -21,16 +21,16 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>0</y>
+      <y>-5</y>
       <width>1000</width>
-      <height>600</height>
+      <height>607</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="assets/resources.qrc">:/main/stage1.jpg</pixmap>
+     <pixmap resource="assets/resources.qrc">:/main/fieldStage.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
