Now with a soft grasslands map and the grid-ey squarey thingy.

--- a/src/tec/ac/cr/gladiators/ui/assets/resources.qrc
+++ b/src/tec/ac/cr/gladiators/ui/assets/resources.qrc
@@ -14,5 +14,6 @@
         <file>cityButton.png</file>
         <file>fieldStage.png</file>
         <file>cityStage.jpg</file>
+        <file>plate.png</file>
     </qresource>
 </RCC>
