--- a/src/tec/ac/cr/gladiators/ui/assets/resources.qrc
+++ b/src/tec/ac/cr/gladiators/ui/assets/resources.qrc
@@ -15,6 +15,7 @@
         <file>fieldStage.png</file>
         <file>cityStage.jpg</file>
         <file>plate.png</file>
+        <file>moneyIcon.png</file>
     </qresource>
     <qresource prefix="/font">
         <file>Papyrus.ttc</file>
