--- a/src/tec/ac/cr/gladiators/ui/field.ui
+++ b/src/tec/ac/cr/gladiators/ui/field.ui
@@ -77,46 +77,46 @@
      <enum>QAbstractScrollArea::AdjustToContents</enum>
     </property>
    </widget>
-   <widget class="QLabel" name="moneyCount">
+   <widget class="QPushButton" name="playButton">
     <property name="geometry">
      <rect>
-      <x>880</x>
+      <x>840</x>
       <y>620</y>
-      <width>31</width>
-      <height>41</height>
+      <width>82</width>
+      <height>27</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <pointsize>27</pointsize>
-     </font>
+    <property name="text">
+     <string>Play</string>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="soldierView">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>1000</width>
+      <height>700</height>
+     </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: white</string>
+     <string notr="true">background-color: transparent</string>
     </property>
-    <property name="text">
-     <string>0</string>
+    <property name="verticalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
     </property>
-   </widget>
-   <widget class="QLabel" name="moneyIcon">
-    <property name="geometry">
-     <rect>
-      <x>800</x>
-      <y>600</y>
-      <width>81</width>
-      <height>81</height>
-     </rect>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
     </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap resource="assets/resources.qrc">:/main/moneyIcon.png</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
+    <property name="sizeAdjustPolicy">
+     <enum>QAbstractScrollArea::AdjustToContents</enum>
     </property>
    </widget>
+   <zorder>background</zorder>
+   <zorder>soldierView</zorder>
+   <zorder>plate</zorder>
+   <zorder>graphicsView</zorder>
+   <zorder>playButton</zorder>
   </widget>
  </widget>
  <resources>
