--- a/src/tec/ac/cr/gladiators/ui/field.ui
+++ b/src/tec/ac/cr/gladiators/ui/field.ui
@@ -112,11 +112,28 @@
      <enum>QAbstractScrollArea::AdjustToContents</enum>
     </property>
    </widget>
+   <widget class="QLabel" name="lifeLabel">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>590</y>
+      <width>61</width>
+      <height>19</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
+    </property>
+    <property name="text">
+     <string>Life: 20</string>
+    </property>
+   </widget>
    <zorder>background</zorder>
    <zorder>soldierView</zorder>
    <zorder>plate</zorder>
    <zorder>graphicsView</zorder>
    <zorder>playButton</zorder>
+   <zorder>lifeLabel</zorder>
   </widget>
  </widget>
  <resources>
