--- a/src/tec/ac/cr/gladiators/ui/field.ui
+++ b/src/tec/ac/cr/gladiators/ui/field.ui
@@ -6,9 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
+    <width>1175</width>
     <height>700</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1175</width>
+    <height>700</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1175</width>
+    <height>700</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Gladiators GBP</string>
@@ -368,6 +386,29 @@
      <string>Soldiers Resistence:</string>
     </property>
    </widget>
+   <widget class="QLineEdit" name="genEntry">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>620</y>
+      <width>113</width>
+      <height>27</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="skipButton">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>660</y>
+      <width>82</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Skip Gen</string>
+    </property>
+   </widget>
    <zorder>background</zorder>
    <zorder>soldierView</zorder>
    <zorder>plate</zorder>
@@ -386,6 +427,8 @@
    <zorder>labelEmoInt</zorder>
    <zorder>labelPhysicalCon</zorder>
    <zorder>labelResist</zorder>
+   <zorder>genEntry</zorder>
+   <zorder>skipButton</zorder>
   </widget>
  </widget>
  <resources>
