Se arregla los labels de datos de los gladiadores

--- a/src/tec/ac/cr/gladiators/ui/assets/resources.qrc
+++ b/src/tec/ac/cr/gladiators/ui/assets/resources.qrc
@@ -32,4 +32,8 @@
         <file>towers/gatlingarrow.png</file>
         <file>towers/gatlingicon.png</file>
     </qresource>
+    <qresource prefix="/soldiers">
+        <file>soldiers/soldierFlash.png</file>
+        <file>soldiers/soldierKnive.png</file>
+    </qresource>
 </RCC>
