--- a/src/tec/ac/cr/gladiators/ui/assets/resources.qrc
+++ b/src/tec/ac/cr/gladiators/ui/assets/resources.qrc
@@ -33,7 +33,9 @@
         <file>towers/gatlingicon.png</file>
     </qresource>
     <qresource prefix="/soldiers">
-        <file>soldiers/soldierFlash.png</file>
-        <file>soldiers/soldierKnive.png</file>
+        <file>soldiers/soldierFlashDown.png</file>
+        <file>soldiers/soldierFlashLeft.png</file>
+        <file>soldiers/soldierFlashRight.png</file>
+        <file>soldiers/soldierFlashUp.png</file>
     </qresource>
 </RCC>
