--- a/src/tec/ac/cr/gladiators/ui/field.ui
+++ b/src/tec/ac/cr/gladiators/ui/field.ui
@@ -99,7 +99,7 @@
     <property name="geometry">
      <rect>
       <x>840</x>
-      <y>620</y>
+      <y>630</y>
       <width>82</width>
       <height>27</height>
      </rect>
@@ -133,7 +133,7 @@
    <widget class="QLabel" name="lifeLabel">
     <property name="geometry">
      <rect>
-      <x>850</x>
+      <x>770</x>
       <y>590</y>
       <width>61</width>
       <height>19</height>
@@ -409,6 +409,32 @@
      <string>Skip Gen</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="nextButton">
+    <property name="geometry">
+     <rect>
+      <x>840</x>
+      <y>660</y>
+      <width>82</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Next</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="resetButton">
+    <property name="geometry">
+     <rect>
+      <x>840</x>
+      <y>590</y>
+      <width>82</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Reset</string>
+    </property>
+   </widget>
    <zorder>background</zorder>
    <zorder>soldierView</zorder>
    <zorder>plate</zorder>
@@ -429,6 +455,8 @@
    <zorder>labelResist</zorder>
    <zorder>genEntry</zorder>
    <zorder>skipButton</zorder>
+   <zorder>nextButton</zorder>
+   <zorder>resetButton</zorder>
   </widget>
  </widget>
  <resources>
