--- a/src/tec/ac/cr/gladiators/ui/field.ui
+++ b/src/tec/ac/cr/gladiators/ui/field.ui
@@ -28,6 +28,11 @@
     <height>700</height>
    </size>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>18</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Gladiators GBP</string>
   </property>
@@ -35,6 +40,9 @@
    <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
    <widget class="QLabel" name="background">
     <property name="geometry">
      <rect>
@@ -98,11 +106,16 @@
    <widget class="QPushButton" name="playButton">
     <property name="geometry">
      <rect>
-      <x>840</x>
+      <x>660</x>
       <y>630</y>
       <width>82</width>
       <height>27</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Play</string>
@@ -133,8 +146,8 @@
    <widget class="QLabel" name="lifeLabel">
     <property name="geometry">
      <rect>
-      <x>770</x>
-      <y>590</y>
+      <x>70</x>
+      <y>600</y>
       <width>61</width>
       <height>19</height>
      </rect>
@@ -149,18 +162,22 @@
    <widget class="QLabel" name="SoldierAge">
     <property name="geometry">
      <rect>
-      <x>1080</x>
-      <y>50</y>
+      <x>1020</x>
+      <y>130</y>
       <width>200</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
+      <family>Liberation Serif</family>
       <pointsize>14</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
     </property>
     <property name="text">
      <string>0</string>
@@ -169,18 +186,22 @@
    <widget class="QLabel" name="SoldierSurvivalProbability">
     <property name="geometry">
      <rect>
-      <x>1080</x>
-      <y>150</y>
+      <x>1020</x>
+      <y>240</y>
       <width>200</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
+      <family>Liberation Serif</family>
       <pointsize>14</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
     </property>
     <property name="text">
      <string>0</string>
@@ -189,18 +210,22 @@
    <widget class="QLabel" name="SoldierHowManyGensWillSurvive">
     <property name="geometry">
      <rect>
-      <x>1080</x>
-      <y>250</y>
+      <x>1020</x>
+      <y>350</y>
       <width>200</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
+      <family>Liberation Serif</family>
       <pointsize>14</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
     </property>
     <property name="text">
      <string>0</string>
@@ -209,18 +234,22 @@
    <widget class="QLabel" name="SoldierEmotionalInteligence">
     <property name="geometry">
      <rect>
-      <x>1080</x>
-      <y>350</y>
+      <x>1020</x>
+      <y>450</y>
       <width>200</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
+      <family>Liberation Serif</family>
       <pointsize>14</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
     </property>
     <property name="text">
      <string>0</string>
@@ -229,18 +258,22 @@
    <widget class="QLabel" name="SoldierPhysicalCondition">
     <property name="geometry">
      <rect>
-      <x>1080</x>
-      <y>450</y>
+      <x>1020</x>
+      <y>550</y>
       <width>200</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
+      <family>Liberation Serif</family>
       <pointsize>14</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
     </property>
     <property name="text">
      <string>0</string>
@@ -249,18 +282,22 @@
    <widget class="QLabel" name="SoldierResistence">
     <property name="geometry">
      <rect>
-      <x>1080</x>
-      <y>550</y>
+      <x>1020</x>
+      <y>640</y>
       <width>200</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
+      <family>Liberation Serif</family>
       <pointsize>14</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
     </property>
     <property name="text">
      <string>0</string>
@@ -269,67 +306,55 @@
    <widget class="QLabel" name="labelAge">
     <property name="geometry">
      <rect>
-      <x>1005</x>
-      <y>0</y>
+      <x>1020</x>
+      <y>90</y>
       <width>201</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
+      <family>Papyrus</family>
       <pointsize>16</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
+    </property>
     <property name="text">
-     <string>Soldiers Age:</string>
+     <string>Age:</string>
     </property>
    </widget>
    <widget class="QLabel" name="labelProb">
     <property name="geometry">
      <rect>
-      <x>1005</x>
-      <y>100</y>
+      <x>1020</x>
+      <y>190</y>
       <width>200</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>13</pointsize>
+      <family>Papyrus</family>
+      <pointsize>16</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
+    </property>
     <property name="text">
-     <string>Survival Probability:</string>
+     <string>Survival Index:</string>
     </property>
    </widget>
    <widget class="QLabel" name="labelSurvive">
     <property name="geometry">
      <rect>
-      <x>1005</x>
-      <y>200</y>
-      <width>200</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Gens He Will Survive:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="labelEmoInt">
-    <property name="geometry">
-     <rect>
-      <x>1005</x>
+      <x>1020</x>
       <y>300</y>
       <width>200</width>
       <height>50</height>
@@ -337,19 +362,23 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>11</pointsize>
+      <family>Papyrus</family>
+      <pointsize>16</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
+    </property>
     <property name="text">
-     <string>Emotional Intelligence:</string>
+     <string>Generations:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="labelPhysicalCon">
+   <widget class="QLabel" name="labelEmoInt">
     <property name="geometry">
      <rect>
-      <x>1005</x>
+      <x>1020</x>
       <y>400</y>
       <width>200</width>
       <height>50</height>
@@ -357,19 +386,23 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>13</pointsize>
+      <family>Papyrus</family>
+      <pointsize>16</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
+    </property>
     <property name="text">
-     <string>Physical Condition:</string>
+     <string>Intelligence:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="labelResist">
+   <widget class="QLabel" name="labelPhysicalCon">
     <property name="geometry">
      <rect>
-      <x>1005</x>
+      <x>1020</x>
       <y>500</y>
       <width>200</width>
       <height>50</height>
@@ -377,20 +410,48 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>13</pointsize>
+      <family>Papyrus</family>
+      <pointsize>16</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
+    </property>
     <property name="text">
-     <string>Soldiers Resistence:</string>
+     <string>Physical:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelResist">
+    <property name="geometry">
+     <rect>
+      <x>1020</x>
+      <y>600</y>
+      <width>200</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Papyrus</family>
+      <pointsize>16</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
+    </property>
+    <property name="text">
+     <string>Resistance:</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="genEntry">
     <property name="geometry">
      <rect>
-      <x>1030</x>
-      <y>620</y>
+      <x>40</x>
+      <y>630</y>
       <width>113</width>
       <height>27</height>
      </rect>
@@ -399,11 +460,16 @@
    <widget class="QPushButton" name="skipButton">
     <property name="geometry">
      <rect>
-      <x>1050</x>
-      <y>660</y>
+      <x>170</x>
+      <y>630</y>
       <width>82</width>
       <height>27</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Skip Gen</string>
@@ -412,8 +478,8 @@
    <widget class="QPushButton" name="nextButton">
     <property name="geometry">
      <rect>
-      <x>840</x>
-      <y>660</y>
+      <x>890</x>
+      <y>630</y>
       <width>82</width>
       <height>27</height>
      </rect>
@@ -425,14 +491,44 @@
    <widget class="QPushButton" name="resetButton">
     <property name="geometry">
      <rect>
-      <x>840</x>
-      <y>590</y>
+      <x>780</x>
+      <y>630</y>
       <width>82</width>
       <height>27</height>
      </rect>
     </property>
     <property name="text">
      <string>Reset</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="soldierInfoLabel">
+    <property name="geometry">
+     <rect>
+      <x>1010</x>
+      <y>10</y>
+      <width>151</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Papyrus</family>
+      <pointsize>18</pointsize>
+      <weight>75</weight>
+      <italic>true</italic>
+      <bold>true</bold>
+      <underline>true</underline>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
+    </property>
+    <property name="text">
+     <string>SOLDIER
+BRIEFING</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <zorder>background</zorder>
@@ -457,6 +553,7 @@
    <zorder>skipButton</zorder>
    <zorder>nextButton</zorder>
    <zorder>resetButton</zorder>
+   <zorder>soldierInfoLabel</zorder>
   </widget>
  </widget>
  <resources>
