--- a/src/tec/ac/cr/gladiators/ui/field.ui
+++ b/src/tec/ac/cr/gladiators/ui/field.ui
@@ -106,10 +106,10 @@
    <widget class="QPushButton" name="playButton">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>630</y>
-      <width>82</width>
-      <height>27</height>
+      <x>700</x>
+      <y>610</y>
+      <width>61</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="font">
@@ -117,8 +117,21 @@
       <pointsize>16</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">border:0</string>
+    </property>
     <property name="text">
-     <string>Play</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="assets/resources.qrc">
+      <normaloff>:/main/playButtonIcon.png</normaloff>:/main/playButtonIcon.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>64</width>
+      <height>64</height>
+     </size>
     </property>
    </widget>
    <widget class="QGraphicsView" name="soldierView">
@@ -146,11 +159,16 @@
    <widget class="QLabel" name="lifeLabel">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>600</y>
+      <x>610</x>
+      <y>640</y>
       <width>61</width>
       <height>19</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Papyrus</family>
+     </font>
     </property>
     <property name="styleSheet">
      <string notr="true">color: white</string>
@@ -283,7 +301,7 @@
     <property name="geometry">
      <rect>
       <x>1020</x>
-      <y>640</y>
+      <y>630</y>
       <width>200</width>
       <height>50</height>
      </rect>
@@ -427,7 +445,7 @@
     <property name="geometry">
      <rect>
       <x>1020</x>
-      <y>600</y>
+      <y>590</y>
       <width>200</width>
       <height>50</height>
      </rect>
@@ -451,7 +469,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>630</y>
+      <y>610</y>
       <width>113</width>
       <height>27</height>
      </rect>
@@ -460,8 +478,8 @@
    <widget class="QPushButton" name="skipButton">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>630</y>
+      <x>60</x>
+      <y>650</y>
       <width>82</width>
       <height>27</height>
      </rect>
@@ -478,27 +496,53 @@
    <widget class="QPushButton" name="nextButton">
     <property name="geometry">
      <rect>
-      <x>890</x>
-      <y>630</y>
-      <width>82</width>
-      <height>27</height>
+      <x>900</x>
+      <y>610</y>
+      <width>61</width>
+      <height>61</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">border:0px</string>
+    </property>
     <property name="text">
-     <string>Next</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="assets/resources.qrc">
+      <normaloff>:/main/nextButtonIcon.png</normaloff>:/main/nextButtonIcon.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>64</width>
+      <height>64</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="resetButton">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>630</y>
-      <width>82</width>
-      <height>27</height>
+      <x>795</x>
+      <y>605</y>
+      <width>71</width>
+      <height>71</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">border:0</string>
+    </property>
     <property name="text">
-     <string>Reset</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="assets/resources.qrc">
+      <normaloff>:/main/resetButtonIcon.png</normaloff>:/main/resetButtonIcon.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>64</width>
+      <height>64</height>
+     </size>
     </property>
    </widget>
    <widget class="QLabel" name="soldierInfoLabel">
@@ -531,6 +575,140 @@ BRIEFING</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QLabel" name="backgroundCarbonFiber">
+    <property name="geometry">
+     <rect>
+      <x>1000</x>
+      <y>0</y>
+      <width>241</width>
+      <height>701</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="assets/resources.qrc">:/main/carbonFiberBackground.jpg</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="ageIcon">
+    <property name="geometry">
+     <rect>
+      <x>1100</x>
+      <y>120</y>
+      <width>51</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="assets/resources.qrc">:/main/ageIcon.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="survivalIcon">
+    <property name="geometry">
+     <rect>
+      <x>1100</x>
+      <y>240</y>
+      <width>51</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="assets/resources.qrc">:/main/survivalIcon.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="generationsIcon">
+    <property name="geometry">
+     <rect>
+      <x>1100</x>
+      <y>350</y>
+      <width>51</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="assets/resources.qrc">:/main/genIcon.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="intelligenceIcon">
+    <property name="geometry">
+     <rect>
+      <x>1100</x>
+      <y>440</y>
+      <width>51</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="assets/resources.qrc">:/main/intelligenceIcon.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="physicalicon">
+    <property name="geometry">
+     <rect>
+      <x>1100</x>
+      <y>540</y>
+      <width>61</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="assets/resources.qrc">:/main/physicalIcon.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="resistanceIcon">
+    <property name="geometry">
+     <rect>
+      <x>1110</x>
+      <y>630</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="assets/resources.qrc">:/main/resistanceIcon.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <zorder>backgroundCarbonFiber</zorder>
    <zorder>background</zorder>
    <zorder>soldierView</zorder>
    <zorder>plate</zorder>
@@ -554,6 +732,12 @@ BRIEFING</string>
    <zorder>nextButton</zorder>
    <zorder>resetButton</zorder>
    <zorder>soldierInfoLabel</zorder>
+   <zorder>ageIcon</zorder>
+   <zorder>survivalIcon</zorder>
+   <zorder>generationsIcon</zorder>
+   <zorder>intelligenceIcon</zorder>
+   <zorder>physicalicon</zorder>
+   <zorder>resistanceIcon</zorder>
   </widget>
  </widget>
  <resources>
