--- a/src/tec/ac/cr/gladiators/ui/field.ui
+++ b/src/tec/ac/cr/gladiators/ui/field.ui
@@ -160,7 +160,7 @@
     <property name="geometry">
      <rect>
       <x>610</x>
-      <y>640</y>
+      <y>610</y>
       <width>61</width>
       <height>19</height>
      </rect>
@@ -469,19 +469,27 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>610</y>
+      <y>590</y>
       <width>113</width>
       <height>27</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="placeholderText">
+     <string>Skip generation</string>
     </property>
    </widget>
    <widget class="QPushButton" name="skipButton">
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>650</y>
-      <width>82</width>
-      <height>27</height>
+      <y>630</y>
+      <width>61</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="font">
@@ -489,8 +497,21 @@
       <pointsize>11</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">border:0</string>
+    </property>
     <property name="text">
-     <string>Skip Gen</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>assets/skipButtonIcon.png</normaloff>assets/skipButtonIcon.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>64</width>
+      <height>64</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="nextButton">
@@ -708,6 +729,36 @@ BRIEFING</string>
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QPushButton" name="pauseButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>20</y>
+      <width>61</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:0</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="assets/resources.qrc">
+      <normaloff>:/main/pauseToggleIcon.png</normaloff>
+      <normalon>:/main/playToggleIcon.png</normalon>:/main/pauseToggleIcon.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>64</width>
+      <height>64</height>
+     </size>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+   </widget>
    <zorder>backgroundCarbonFiber</zorder>
    <zorder>background</zorder>
    <zorder>soldierView</zorder>
@@ -738,6 +789,7 @@ BRIEFING</string>
    <zorder>intelligenceIcon</zorder>
    <zorder>physicalicon</zorder>
    <zorder>resistanceIcon</zorder>
+   <zorder>pauseButton</zorder>
   </widget>
  </widget>
  <resources>
