--- a/src/tec/ac/cr/gladiators/ui/field.ui
+++ b/src/tec/ac/cr/gladiators/ui/field.ui
@@ -159,22 +159,26 @@
    <widget class="QLabel" name="lifeLabel">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>610</y>
-      <width>61</width>
-      <height>19</height>
+      <x>15</x>
+      <y>195</y>
+      <width>71</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Papyrus</family>
+      <family>Liberation Sans</family>
+      <pointsize>16</pointsize>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">color: white</string>
     </property>
     <property name="text">
-     <string>Life: 20</string>
+     <string>20</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="SoldierAge">
@@ -759,13 +763,31 @@ BRIEFING</string>
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QLabel" name="heart">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>180</y>
+      <width>61</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="assets/resources.qrc">:/main/redHeart.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
    <zorder>backgroundCarbonFiber</zorder>
    <zorder>background</zorder>
    <zorder>soldierView</zorder>
    <zorder>plate</zorder>
    <zorder>graphicsView</zorder>
    <zorder>playButton</zorder>
-   <zorder>lifeLabel</zorder>
    <zorder>SoldierAge</zorder>
    <zorder>SoldierSurvivalProbability</zorder>
    <zorder>SoldierHowManyGensWillSurvive</zorder>
@@ -790,6 +812,8 @@ BRIEFING</string>
    <zorder>physicalicon</zorder>
    <zorder>resistanceIcon</zorder>
    <zorder>pauseButton</zorder>
+   <zorder>heart</zorder>
+   <zorder>lifeLabel</zorder>
   </widget>
  </widget>
  <resources>
