Se arregla los labels de datos de los gladiadores

--- a/src/tec/ac/cr/gladiators/ui/assets/resources.qrc
+++ b/src/tec/ac/cr/gladiators/ui/assets/resources.qrc
@@ -44,5 +44,6 @@
         <file>soldiers/soldierFlashLeft.png</file>
         <file>soldiers/soldierFlashRight.png</file>
         <file>soldiers/soldierFlashUp.png</file>
+        <file>soldiers/fire.png</file>
     </qresource>
 </RCC>
