--- a/src/tec/ac/cr/gladiators/ui/field.ui
+++ b/src/tec/ac/cr/gladiators/ui/field.ui
@@ -159,8 +159,8 @@
    <widget class="QLabel" name="lifeLabel">
     <property name="geometry">
      <rect>
-      <x>15</x>
-      <y>195</y>
+      <x>920</x>
+      <y>30</y>
       <width>71</width>
       <height>21</height>
      </rect>
@@ -483,6 +483,9 @@
       <pointsize>12</pointsize>
      </font>
     </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
     <property name="placeholderText">
      <string>Skip generation</string>
     </property>
@@ -766,8 +769,8 @@ BRIEFING</string>
    <widget class="QLabel" name="heart">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>180</y>
+      <x>925</x>
+      <y>15</y>
       <width>61</width>
       <height>61</height>
      </rect>
@@ -785,7 +788,7 @@ BRIEFING</string>
    <widget class="QPushButton" name="thanosButton">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>20</x>
       <y>100</y>
       <width>71</width>
       <height>71</height>
@@ -800,6 +803,62 @@ BRIEFING</string>
     <property name="icon">
      <iconset resource="assets/resources.qrc">
       <normaloff>:/main/thanosIcon.png</normaloff>:/main/thanosIcon.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>64</width>
+      <height>64</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="fastForwardButton">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>610</y>
+      <width>61</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:0</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="assets/resources.qrc">
+      <normaloff>:/main/fastForwardIcon.png</normaloff>
+      <normalon>:/main/fastForwardIcon_pressed.png</normalon>:/main/fastForwardIcon.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>64</width>
+      <height>64</height>
+     </size>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="nightKingButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>180</y>
+      <width>71</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:0px</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="assets/resources.qrc">
+      <normaloff>:/main/nightKingButtonIcon.png</normaloff>:/main/nightKingButtonIcon.png</iconset>
     </property>
     <property name="iconSize">
      <size>
@@ -841,6 +900,8 @@ BRIEFING</string>
    <zorder>heart</zorder>
    <zorder>lifeLabel</zorder>
    <zorder>thanosButton</zorder>
+   <zorder>fastForwardButton</zorder>
+   <zorder>nightKingButton</zorder>
   </widget>
  </widget>
  <resources>
