--- a/src/tec/ac/cr/gladiators/ui/stageselect.ui
+++ b/src/tec/ac/cr/gladiators/ui/stageselect.ui
@@ -18,10 +18,13 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>230</y>
+      <y>160</y>
       <width>201</width>
       <height>81</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>OpenHandCursor</cursorShape>
     </property>
     <property name="text">
      <string/>
@@ -41,10 +44,13 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>410</y>
+      <y>360</y>
       <width>201</width>
       <height>81</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>OpenHandCursor</cursorShape>
     </property>
     <property name="text">
      <string/>
@@ -83,7 +89,7 @@
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>80</y>
+      <y>40</y>
       <width>391</width>
       <height>71</height>
      </rect>
@@ -104,7 +110,7 @@
     <property name="geometry">
      <rect>
       <x>520</x>
-      <y>180</y>
+      <y>120</y>
       <width>261</width>
       <height>171</height>
      </rect>
@@ -123,7 +129,7 @@
     <property name="geometry">
      <rect>
       <x>520</x>
-      <y>380</y>
+      <y>320</y>
       <width>261</width>
       <height>171</height>
      </rect>
@@ -138,12 +144,32 @@
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QLineEdit" name="ipEntry">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>530</y>
+      <width>321</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="placeholderText">
+     <string>IP</string>
+    </property>
+   </widget>
    <zorder>background</zorder>
    <zorder>fieldButton</zorder>
    <zorder>cityButton</zorder>
    <zorder>selectLabel</zorder>
    <zorder>fieldPic</zorder>
    <zorder>fieldPic_2</zorder>
+   <zorder>ipEntry</zorder>
   </widget>
  </widget>
  <resources>
