--- a/src/tec/ac/cr/gladiators/ui/field.ui
+++ b/src/tec/ac/cr/gladiators/ui/field.ui
@@ -106,7 +106,7 @@
    <widget class="QPushButton" name="playButton">
     <property name="geometry">
      <rect>
-      <x>700</x>
+      <x>760</x>
       <y>610</y>
       <width>61</width>
       <height>61</height>
@@ -530,7 +530,7 @@
    <widget class="QPushButton" name="nextButton">
     <property name="geometry">
      <rect>
-      <x>900</x>
+      <x>920</x>
       <y>610</y>
       <width>61</width>
       <height>61</height>
@@ -559,8 +559,8 @@
    <widget class="QPushButton" name="resetButton">
     <property name="geometry">
      <rect>
-      <x>795</x>
-      <y>605</y>
+      <x>840</x>
+      <y>610</y>
       <width>71</width>
       <height>71</height>
      </rect>
@@ -1233,7 +1233,7 @@ Leviosa</string>
    <widget class="QLabel" name="electricCost">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>490</x>
       <y>660</y>
       <width>41</width>
       <height>31</height>
@@ -1392,6 +1392,59 @@ Leviosa</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QPushButton" name="fullresetButton">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>610</y>
+      <width>61</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:0</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="assets/resources.qrc">
+      <normaloff>:/main/fullresetIcon.png</normaloff>:/main/fullresetIcon.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>64</width>
+      <height>64</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QLabel" name="dragon">
+    <property name="geometry">
+     <rect>
+      <x>1250</x>
+      <y>20</y>
+      <width>601</width>
+      <height>551</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="assets/resources.qrc">:/main/dragon.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
    <zorder>backgroundCarbonFiber</zorder>
    <zorder>background</zorder>
    <zorder>soldierView</zorder>
@@ -1446,6 +1499,8 @@ Leviosa</string>
    <zorder>dracarysCost</zorder>
    <zorder>frozenCost</zorder>
    <zorder>gatlingCost_2</zorder>
+   <zorder>fullresetButton</zorder>
+   <zorder>dragon</zorder>
   </widget>
  </widget>
  <resources>
